kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zain-game
    tier: backend
    version: "1"
  name: zain-game-backend
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: zain-game
    tier: backend
    version: "1"
  sessionAffinity: None
  type: ClusterIP
