kube/network-policy-egress.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-iapi
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 10.155.99.97/24
  podSelector:
    matchLabels:
      app: zain-game
      tier: backend
  policyTypes:
  - Ingress
  - Egress
