kube/network-policy-ingress.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: allow-ingress-game-backend
spec:
  ingress:
  - ports:
    - port: 3000
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          name: kube-system
      podSelector:
        matchLabels:
          app: nginx-ingress-controller
    - namespaceSelector:
        matchLabels:
          name: kube-system
      podSelector:
        matchLabels:
          app: nginx-ingress-controller-public
    - namespaceSelector:
        matchLabels:
          name: istio-system
      podSelector:
        matchLabels:
          app: istio-ingressgateway
  podSelector:
    matchLabels:
      app: zain-game
      tier: backend
  policyTypes:
  - Ingress
